Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -336,13 +336,15 @@
        "(5.634896312558807, 3.902265648903966)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
+    "updated_b = first_step[0]\n",
+    "updated_m = first_step[1]\n",
+    "step_gradient(updated_b, updated_m, data)\n",
     "# b = 5.63489, m= 3.902265"
    ]
   },
