--- a/index.ipynb
+++ b/index.ipynb
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -391,13 +391,13 @@
        "(3.1619764855577257, 49.84313430300858)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# "
+    "iterations[999]"
    ]
   },
   {
