--- a/index.ipynb
+++ b/index.ipynb
@@ -521,10 +521,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "b = 0\n",
+    "m = [0,0]\n",
+    "updated_b, updated_m = step_gradient(b, m, data) # {'b': 0.0085, 'm': 0.6249999999999999}"
+   ]
   },
   {
    "cell_type": "markdown",
