--- a/index.ipynb
+++ b/index.ipynb
@@ -539,10 +539,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# set our initial step with m and b values, and the corresponding error.\n",
+    "b = 0\n",
+    "m = [0,0]\n",
+    "iterations = []\n",
+    "for i in range(500):\n",
+    "    iteration = step_gradient(b, m, data)\n",
+    "    b= iteration[0]\n",
+    "    m = []\n",
+    "    for j in range(len(iteration)):\n",
+    "        m.append(iteration[1][j])\n",
+    "    iterations.append(iteration)"
+   ]
   },
   {
    "cell_type": "markdown",
