Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -574,12 +574,14 @@
        "(1.944428332442866, array([2.995890, -3.911055]))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "iterations[499]\n"
+   ]
   },
   {
    "cell_type": "markdown",
